--- a/tindev/package.json
+++ b/tindev/package.json
@@ -16,7 +16,8 @@
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.7.0",
-    "react-navigation": "^4.3.2"
+    "react-navigation": "^4.3.2",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
